--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Antoaneta Ivanova">
     <meta name="description"
-        content="This is a charitable website in which people can donate to help save the environment.">
+        content="This is a charitable website in which people can donate money to help save the environment.">
     <meta name="keywords" content="donation, environment, save the planet, tree, ocean, pollution, global warming">
     <title>Welcome Page</title>
     <link rel="icon" type="image/png" href="img/favicon.png">
@@ -21,12 +21,96 @@
 <body>
 
     <header>
-        <h1></h1>
-        <nav></nav>
+        <nav>
+            <div class="container-fluid">
+                <ul class="nav nav-underline m-3">
+                    <li class="nav-item">
+                        <a class="nav-link text-dark p-2 fw-bold" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark p-2 fw-bold" href="#">Shop</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark p-2 fw-bold" href="#">Checkout</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <h1 id="mainheading">🌿 Plant Our Future 🌿</h1>
     </header>
 
     <main>
-
+        <section>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-4">
+                        <div class="card">
+                            <img src="img/sunflower.jpg" class="card-img-top" alt="a picture of sunflowers">
+                            <div class="card-body">
+                                <h5 class="card-title">Sunflower Seeds</h5>
+                                <p class="card-text">Buy a pack of <b>20 sunflower seeds</b>! Brighten up your home. 
+                                    Every purchase supports planting flowers in public green spaces.
+                                </p>
+                                <p class="card-text fw-bold">€5</p>
+                                <a href="#" class="btn btn-primary">Add to Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card">
+                            <img src="img/lavender.jpg" class="card-img-top" alt="a picture of lavender flowers">
+                            <div class="card-body">
+                                <h5 class="card-title">Lavender Seeds</h5>
+                                <p class="card-text">Buy a pack of <b>20 lavender seeds</b>! Bring calm and fragrant lavender to your home. 
+                                    Every purchase supports planting flowers in public green spaces.
+                                </p>
+                                <p class="card-text fw-bold">€7</p>
+                                <a href="#" class="btn btn-primary">Add to Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card">
+                            <img src="img/zinnia.jpeg" class="card-img-top" alt="a picture of zinnia flowers">
+                            <div class="card-body">
+                                <h5 class="card-title">Zinnia Seeds</h5>
+                                <p class="card-text">Buy a pack of <b>20 zinnia seeds</b>! Bring bold and colours to your home. Easiest to grow.
+                                    Every purchase supports planting flowers in public green spaces.
+                                </p>
+                                <p class="card-text fw-bold">€6</p>
+                                <a href="#" class="btn btn-primary">Add to Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card">
+                            <img src="img/lemontree.jpg" class="card-img-top" alt="a picture of a lemon tree.">
+                            <div class="card-body">
+                                <h5 class="card-title">Lemon Tree Seeds</h5>
+                                <p class="card-text">Buy a pack of <b>20 lemon tree seeds</b>! Grow some refreshing and fragrant lemons at your home.
+                                    Every purchase supports planting flowers in public green spaces.
+                                </p>
+                                <p class="card-text fw-bold">€6</p>
+                                <a href="#" class="btn btn-primary">Add to Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card">
+                            <img src="img/marigold.jpg" class="card-img-top" alt="a picture of marigold flowers.">
+                            <div class="card-body">
+                                <h5 class="card-title">Marigold Flower Seeds</h5>
+                                <p class="card-text">Buy a pack of <b>20 Marigold Flower Seeds</b>! Easily grow some bright and cheerful flowers add warm colours to you home.
+                                    Every purchase supports planting flowers in public green spaces.
+                                </p>
+                                <p class="card-text fw-bold">€5</p>
+                                <a href="#" class="btn btn-primary">Add to Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
