--- a/index.html
+++ b/index.html
@@ -97,13 +97,65 @@
                     </div>
                     <div class="col-4">
                         <div class="card">
-                            <img src="img/marigold.jpg" class="card-img-top" alt="a picture of marigold flowers.">
+                            <img src="img/rosemary.jpg" class="card-img-top" alt="a picture of marigold flowers.">
                             <div class="card-body">
-                                <h5 class="card-title">Marigold Flower Seeds</h5>
-                                <p class="card-text">Buy a pack of <b>20 Marigold Flower Seeds</b>! Easily grow some bright and cheerful flowers add warm colours to you home.
+                                <h5 class="card-title">Rosemary Seeds</h5>
+                                <p class="card-text">Buy a pack of <b>20 Rosemary Seeds</b>! Grow a herb in pots, on your balcony or on your windowsills. Perfect for your cooking.
                                     Every purchase supports planting flowers in public green spaces.
                                 </p>
-                                <p class="card-text fw-bold">€5</p>
+                                <p class="card-text fw-bold">€6</p>
+                                <a href="#" class="btn btn-primary">Add to Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card">
+                            <img src="img/olive.jpg" class="card-img-top" alt="a picture of maridddddddddddddddddddgold flowers.">
+                            <div class="card-body">
+                                <h5 class="card-title">Olive Tree Seeds</h5>
+                                <p class="card-text">Buy a pack of <b>20 Olive Tree Seeds</b>! Grow your own olive tree! Bring a Mediterranean youch to your home.
+                                    Every purchase supports planting flowers in public green spaces.
+                                </p>
+                                <p class="card-text fw-bold">€8</p>
+                                <a href="#" class="btn btn-primary">Add to Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card">
+                            <img src="img/beeflowermix.jpg" class="card-img-top" alt="a picture of bee-friendly flower mix.">
+                            <div class="card-body">
+                                <h5 class="card-title">Bee-Friendly Flower Mix (20g)</h5>
+                                <p class="card-text">Buy a 20g pack of <b>Bee-Friendly Flower Mix</b>! A colourful mixture of flowers to support bees and other pollinators. 
+                                    Each purchase supports our community planting projects to create a healthier environment for local wildlife.
+                                </p>
+                                <p class="card-text fw-bold">€7</p>
+                                <a href="#" class="btn btn-primary">Add to Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card">
+                            <img src="img/butterflygardenmix.jpg" class="card-img-top" alt="a picture of butterfly-friendly flower mix.">
+                            <div class="card-body">
+                                <h5 class="card-title">Butterfly-Friendly Garden Mix (20g)</h5>
+                                <p class="card-text">Buy a 20g pack of <b>Butterfly-Friendly Garden Mix</b>! A colourful mixture of flowers to attract bees beautiful butterflies. 
+                                    Each purchase supports our community planting projects to create a healthier environment for local wildlife.
+                                </p>
+                                <p class="card-text fw-bold">€7</p>
+                                <a href="#" class="btn btn-primary">Add to Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card">
+                            <img src="img/biodegradablepots.jpg" class="card-img-top" alt="a picture of biodegradable Starter Pots.">
+                            <div class="card-body">
+                                <h5 class="card-title">Biodegradable Starter Pots (x4 Pack)</h5>
+                                <p class="card-text">Buy 4 <b>BBiodegradable Starter Pots</b>! A set of 4 pots that is eco-friendly and perfect for starting seed growth at home. 
+                                    Every purchase supports our community gardening and planting efforts.
+                                </p>
+                                <p class="card-text fw-bold">€7</p>
                                 <a href="#" class="btn btn-primary">Add to Cart</a>
                             </div>
                         </div>
