--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     <main>
         <section>
             <div class="container-fluid">
-                <div class="row">
-                    <div class="col-4">
+                <div class="row pt-5">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3 p-2">
                         <div class="card">
                             <img src="img/sunflower.jpg" class="card-img-top" alt="a picture of sunflowers">
                             <div class="card-body">
@@ -56,7 +56,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="card">
                             <img src="img/lavender.jpg" class="card-img-top" alt="a picture of lavender flowers">
                             <div class="card-body">
@@ -69,7 +69,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="card">
                             <img src="img/zinnia.jpeg" class="card-img-top" alt="a picture of zinnia flowers">
                             <div class="card-body">
@@ -82,7 +82,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="card">
                             <img src="img/lemontree.jpg" class="card-img-top" alt="a picture of a lemon tree.">
                             <div class="card-body">
@@ -95,7 +95,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="card">
                             <img src="img/rosemary.jpg" class="card-img-top" alt="a picture of marigold flowers.">
                             <div class="card-body">
@@ -108,7 +108,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="card">
                             <img src="img/olive.jpg" class="card-img-top" alt="a picture of maridddddddddddddddddddgold flowers.">
                             <div class="card-body">
@@ -121,7 +121,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="card">
                             <img src="img/beeflowermix.jpg" class="card-img-top" alt="a picture of bee-friendly flower mix.">
                             <div class="card-body">
@@ -134,7 +134,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="card">
                             <img src="img/butterflygardenmix.jpg" class="card-img-top" alt="a picture of butterfly-friendly flower mix.">
                             <div class="card-body">
@@ -147,12 +147,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="card">
                             <img src="img/biodegradablepots.jpg" class="card-img-top" alt="a picture of biodegradable Starter Pots.">
                             <div class="card-body">
                                 <h5 class="card-title">Biodegradable Starter Pots (x4 Pack)</h5>
-                                <p class="card-text">Buy 4 <b>BBiodegradable Starter Pots</b>! A set of 4 pots that is eco-friendly and perfect for starting seed growth at home. 
+                                <p class="card-text">Buy 4 <b>Biodegradable Starter Pots</b>! A set of 4 pots that is eco-friendly and perfect for starting seed growth at home. 
                                     Every purchase supports our community gardening and planting efforts.
                                 </p>
                                 <p class="card-text fw-bold">€7</p>
@@ -160,6 +160,46 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                        <div class="card">
+                            <img src="img/birdhouse.jpg" class="card-img-top" alt="a picture of a Wooden Bird House.">
+                            <div class="card-body">
+                                <h5 class="card-title">Wooden Bird House</h5>
+                                <p class="card-text">Buy a <b>Wooden Bird House</b>! Perfectly durable, weather-resistant wooden bird house that supports local bird populations. 
+                                    Hang in gardens, balconies, or public green spaces. Each purchase supports our community planting projects to create a healthier environment for local wildlife.
+                                </p>
+                                <p class="card-text fw-bold">€10</p>
+                                <a href="#" class="btn btn-primary">Add to Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                        <div class="card">
+                            <img src="img/wateringcan.jpg" class="card-img-top" alt="a picture of a Recycled Small Watering Can">
+                            <div class="card-body">
+                                <h5 class="card-title">Recycled Small Watering Can</h5>
+                                <p class="card-text">Buy a <b>Recycled Small Watering Can</b>! A watering made from recycled materials, perfect for caring for indoor and outdoor plants. 
+                                    Every purchase helps support our community gardening and environmental projects.
+                                </p>
+                                <p class="card-text fw-bold">€8</p>
+                                <a href="#" class="btn btn-primary">Add to Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                        <div class="card">
+                            <img src="img/woodenplantlabels.jpg" class="card-img-top" alt="a picture of Wooden Plant Labels">
+                            <div class="card-body">
+                                <h5 class="card-title">Wooden Plant Labels (x6)</h5>
+                                <p class="card-text">Buy 6 x <b>Wooden Plant Labels</b>! Eco-friendly wooden plant labels, perfect for marking herbs, flowers, and seedlings. Biodegradable and helps to garden organize. 
+                                    Each purchase supports our community planting and planting projects.”
+                                </p>
+                                <p class="card-text fw-bold">€3</p>
+                                <a href="#" class="btn btn-primary">Add to Cart</a>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
