--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section>
             <div class="container-fluid">
                 <div class="row pt-5">
-                    <div class="col-12 col-sm-6 col-md-4 col-lg-3 p-2">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-5">
                         <div class="card">
                             <img src="img/sunflower.jpg" class="card-img-top" alt="a picture of sunflowers">
                             <div class="card-body">
@@ -56,7 +56,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-5">
                         <div class="card">
                             <img src="img/lavender.jpg" class="card-img-top" alt="a picture of lavender flowers">
                             <div class="card-body">
@@ -69,7 +69,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-5">
                         <div class="card">
                             <img src="img/zinnia.jpeg" class="card-img-top" alt="a picture of zinnia flowers">
                             <div class="card-body">
@@ -82,12 +82,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-5">
                         <div class="card">
                             <img src="img/lemontree.jpg" class="card-img-top" alt="a picture of a lemon tree.">
                             <div class="card-body">
                                 <h5 class="card-title">Lemon Tree Seeds</h5>
-                                <p class="card-text">Buy a pack of <b>20 lemon tree seeds</b>! Grow some refreshing and fragrant lemons at your home.
+                                <p class="card-text">Buy a pack of <b>20 lemon tree seeds</b>! Grow refreshing and fragrant lemons at your home.
                                     Every purchase supports planting flowers in public green spaces.
                                 </p>
                                 <p class="card-text fw-bold">€6</p>
@@ -95,9 +95,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-5">
                         <div class="card">
-                            <img src="img/rosemary.jpg" class="card-img-top" alt="a picture of marigold flowers.">
+                            <img src="img/rosemary.jpg" class="card-img-top" alt="a picture of rosemary herbs.">
                             <div class="card-body">
                                 <h5 class="card-title">Rosemary Seeds</h5>
                                 <p class="card-text">Buy a pack of <b>20 Rosemary Seeds</b>! Grow a herb in pots, on your balcony or on your windowsills. Perfect for your cooking.
@@ -108,9 +108,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-5">
                         <div class="card">
-                            <img src="img/olive.jpg" class="card-img-top" alt="a picture of maridddddddddddddddddddgold flowers.">
+                            <img src="img/olive.jpg" class="card-img-top" alt="a picture of olive seeds.">
                             <div class="card-body">
                                 <h5 class="card-title">Olive Tree Seeds</h5>
                                 <p class="card-text">Buy a pack of <b>20 Olive Tree Seeds</b>! Grow your own olive tree! Bring a Mediterranean youch to your home.
@@ -121,38 +121,38 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-5">
                         <div class="card">
                             <img src="img/beeflowermix.jpg" class="card-img-top" alt="a picture of bee-friendly flower mix.">
                             <div class="card-body">
                                 <h5 class="card-title">Bee-Friendly Flower Mix (20g)</h5>
-                                <p class="card-text">Buy a 20g pack of <b>Bee-Friendly Flower Mix</b>! A colourful mixture of flowers to support bees and other pollinators. 
-                                    Each purchase supports our community planting projects to create a healthier environment for local wildlife.
+                                <p class="card-text">Buy a 20g pack of <b>Bee-Friendly Flower Mix</b>! Many colourful flowers to support bees. 
+                                    Each purchase supports our community planting projects for a healthier environment for local wildlife.
                                 </p>
                                 <p class="card-text fw-bold">€7</p>
                                 <a href="#" class="btn btn-primary">Add to Cart</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-5">
                         <div class="card">
                             <img src="img/butterflygardenmix.jpg" class="card-img-top" alt="a picture of butterfly-friendly flower mix.">
                             <div class="card-body">
-                                <h5 class="card-title">Butterfly-Friendly Garden Mix (20g)</h5>
-                                <p class="card-text">Buy a 20g pack of <b>Butterfly-Friendly Garden Mix</b>! A colourful mixture of flowers to attract bees beautiful butterflies. 
-                                    Each purchase supports our community planting projects to create a healthier environment for local wildlife.
+                                <h5 class="card-title">Butterfly Garden Mix (20g)</h5>
+                                <p class="card-text">Buy a 20g pack of <b>Butterfly Garden Mix</b>! Colourful mix of flowers to attract butterflies. 
+                                    Each purchase supports our community planting projects for a healthier environment for local wildlife.
                                 </p>
                                 <p class="card-text fw-bold">€7</p>
                                 <a href="#" class="btn btn-primary">Add to Cart</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-5">
                         <div class="card">
                             <img src="img/biodegradablepots.jpg" class="card-img-top" alt="a picture of biodegradable Starter Pots.">
                             <div class="card-body">
-                                <h5 class="card-title">Biodegradable Starter Pots (x4 Pack)</h5>
-                                <p class="card-text">Buy 4 <b>Biodegradable Starter Pots</b>! A set of 4 pots that is eco-friendly and perfect for starting seed growth at home. 
+                                <h5 class="card-title">Biodegradable Starter Pots (x4)</h5>
+                                <p class="card-text">Buy 4 <b>Biodegradable Starter Pots</b>! A set of eco-friendly 4 pots. Perfect for starting seed growth at home. 
                                     Every purchase supports our community gardening and planting efforts.
                                 </p>
                                 <p class="card-text fw-bold">€7</p>
@@ -160,20 +160,20 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-5">
                         <div class="card">
                             <img src="img/birdhouse.jpg" class="card-img-top" alt="a picture of a Wooden Bird House.">
                             <div class="card-body">
                                 <h5 class="card-title">Wooden Bird House</h5>
-                                <p class="card-text">Buy a <b>Wooden Bird House</b>! Perfectly durable, weather-resistant wooden bird house that supports local bird populations. 
-                                    Hang in gardens, balconies, or public green spaces. Each purchase supports our community planting projects to create a healthier environment for local wildlife.
+                                <p class="card-text">Buy a <b>Wooden Bird House</b>! Perfectly weather-resistant wooden bird house supporting local bird populations. 
+                                    Each purchase supports our community planting projects to create a healthier environment for local wildlife.
                                 </p>
                                 <p class="card-text fw-bold">€10</p>
                                 <a href="#" class="btn btn-primary">Add to Cart</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-5">
                         <div class="card">
                             <img src="img/wateringcan.jpg" class="card-img-top" alt="a picture of a Recycled Small Watering Can">
                             <div class="card-body">
@@ -186,7 +186,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-5">
                         <div class="card">
                             <img src="img/woodenplantlabels.jpg" class="card-img-top" alt="a picture of Wooden Plant Labels">
                             <div class="card-body">
