editing shopping cart

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <main>
         <section class="intro">
             <div class="container">
-                <h4 class="introheading">Help Us Plant a Greener Tomorrow</h4>
+                <h4 class="introheading">Our Mission</h4>
                 <p id="introtext">"Our mission in <b>GrowFuture Organisation</b> is to help plant seeds in community
                     spaces.
                     We grow biodiversity in parks, schools, and public gardens. Help us grow our future by purchasing
@@ -62,22 +62,34 @@
 
         </section>
         <section>
+
             <div class="container">
+                <h4 class="subheading">Our Products</h4>
                 <div class="row">
-                    <h4 class="subheading">Our Products</h4>
+                    <span id="cart-count">Number of items in your Shopping Cart: 0</span>
+                </div>
+                <div class="row">
+                    
+
                     <div class="col-12 col-sm-6 col-md-4 mb-5">
                         <div class="card">
+
                             <img src="img/sunflower.jpg" class="card-img-top" alt="a picture of sunflowers">
+
                             <div class="card-body">
-                                <h5 class="card-title">Sunflower Seeds</h5>
-                                <p class="card-text">Buy a pack of <b>20 sunflower seeds</b>! Brighten up your home.
+                                <h5>Sunflower Seeds</h5>
+                                <p>Buy a pack of <b>20 sunflower seeds</b>! Brighten up your home.
                                     Every purchase supports planting flowers in public green spaces.
                                 </p>
-                                <p class="card-text fw-bold">€5</p>
-                                <a href="#" class="btn btn-primary">Add to Cart</a>
+                                <p class="fw-bold">€5</p>
+
+                                <button class="addtocartbtn" data-name="Sunflower Seeds" data-price="5">Add to Cart</button>
+
                             </div>
+
                         </div>
                     </div>
+
                     <div class="col-12 col-sm-6 col-md-4 mb-5">
                         <div class="card">
                             <img src="img/lavender.jpg" class="card-img-top" alt="a picture of lavender flowers">
@@ -88,7 +100,7 @@
                                     Every purchase supports planting flowers in public green spaces.
                                 </p>
                                 <p class="card-text fw-bold">€7</p>
-                                <a href="#" class="btn btn-primary">Add to Cart</a>
+                                <button class="addtocartbtn" data-name="Lavnder Seeds" data-price="7">Add to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -102,7 +114,7 @@
                                     Every purchase supports planting flowers in public green spaces.
                                 </p>
                                 <p class="card-text fw-bold">€6</p>
-                                <a href="#" class="btn btn-primary">Add to Cart</a>
+                                <button class="addtocartbtn" data-name="Zinnia Seeds" data-price="6">Add to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -116,7 +128,7 @@
                                     Every purchase supports planting flowers in public green spaces.
                                 </p>
                                 <p class="card-text fw-bold">€6</p>
-                                <a href="#" class="btn btn-primary">Add to Cart</a>
+                                <button class="addtocartbtn" data-name="Lemon Tree Seeds" data-price="6">Add to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -132,7 +144,7 @@
                                     for local wildlife.
                                 </p>
                                 <p class="card-text fw-bold">€7</p>
-                                <a href="#" class="btn btn-primary">Add to Cart</a>
+                                <button class="addtocartbtn" data-name="Butterfly Garden Mix" data-price="7">Add to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -146,7 +158,7 @@
                                     Every purchase supports planting flowers in public green spaces.
                                 </p>
                                 <p class="card-text fw-bold">€6</p>
-                                <a href="#" class="btn btn-primary">Add to Cart</a>
+                                <button class="addtocartbtn" data-name="Rosemary Seeds" data-price="6">Add to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -162,7 +174,7 @@
                                     for local wildlife.
                                 </p>
                                 <p class="card-text fw-bold">€7</p>
-                                <a href="#" class="btn btn-primary">Add to Cart</a>
+                                <button class="addtocartbtn" data-name="Bee-Friendly Flower Mix" data-price="7">Add to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -176,7 +188,7 @@
                                     Every purchase supports planting flowers in public green spaces.
                                 </p>
                                 <p class="card-text fw-bold">€8</p>
-                                <a href="#" class="btn btn-primary">Add to Cart</a>
+                                <button class="addtocartbtn" data-name="Olive Tree Seeds" data-price="8">Add to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -191,7 +203,7 @@
                                     environment for local wildlife.
                                 </p>
                                 <p class="card-text fw-bold">€10</p>
-                                <a href="#" class="btn btn-primary">Add to Cart</a>
+                                <button class="addtocartbtn" data-name="Wooden Bird House" data-price="10">Add to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -206,7 +218,7 @@
                                     Every purchase supports our community gardening and planting efforts.
                                 </p>
                                 <p class="card-text fw-bold">€7</p>
-                                <a href="#" class="btn btn-primary">Add to Cart</a>
+                                <button class="addtocartbtn" data-name="Biodegradable Starter Pots" data-price="7">Add to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -221,7 +233,7 @@
                                     Every purchase helps support our community gardening and environmental projects.
                                 </p>
                                 <p class="card-text fw-bold">€8</p>
-                                <a href="#" class="btn btn-primary">Add to Cart</a>
+                                <button class="addtocartbtn" data-name="Recycled Small Watering Can" data-price="8">Add to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -238,11 +250,11 @@
                                     Each purchase supports our community planting and planting projects.”
                                 </p>
                                 <p class="card-text fw-bold">€3</p>
-                                <a href="#" class="btn btn-primary">Add to Cart</a>
+                                <button class="addtocartbtn" data-name="Wooden Plant Labels" data-price="3">Add to Cart</button>
+
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </section>
