--- a/index.html
+++ b/index.html
@@ -65,10 +65,11 @@
 
             <div class="container">
                 <h4 class="subheading">Our Products</h4>
-                <div class="row">
-                    <span id="cart-count">Number of items in your Shopping Cart: 0</span>
+                <div class="row" id="cartinfo">
+                    <p>🛒 <b>Number of items in your Shopping Cart:</b> <span id="cartcount">0</span></p>
+                    <p>💳 <b>Total amount: €</b> <span id="totalprice">0</span></p>
                 </div>
-                <div class="row">
+                <div class="row mt-3">
                     
 
                     <div class="col-12 col-sm-6 col-md-4 mb-5">
